updating font size, fixing bug in layout being same size on mobile and desktop, making max page width size for desktop larger

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -37,7 +37,7 @@ $dark-gray: #767f87;
 //////////////// 3. Fonts preferences /////////////////
 $sans-family: Roboto, sans-serif;
 $mono-family: Consolas, monospace;
-$base-font-size: 16px;
+$base-font-size: 20px;
 $medium-font-size: $base-font-size * 0.938;
 $small-font-size: $base-font-size * 0.875;
 $base-line-height: 1.85;
@@ -49,7 +49,7 @@ $bold-weight: 700;
 // $black-weight: 900; // uncomment if necessary
 
 //////////////// 4.Responsive design (media queries) /////////////////
-$wide-size: 890px;
+$wide-size: 1200px;
 $narrow-size: 720px;
 
 // Padding unit
